# LANTSA

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  installation.rst  references.rst  requirements.txt
docs/_static/css/: custom.css
docs/extensions/: typed_returns.py
docs/release_notes/: index.rst  v0.3.0.rst  v0.4.0.rst  v0.4.2.rst  v0.4.3.rst
docs/tutorials/: 1M_neurons_analysis.ipynb  index.rst  single_cell_transcriptomics.ipynb  spatial_transcriptomics.ipynb  transfer_labels.ipynb
lantsa/: __init__.py  _compat.py  _initialize.py  _lasso_landmarks.py  _select_landmarks.py  _select_learning_samples.py  _solve.py  _subspace_analysis.py  _transfer_labels.py
